--- a/templates/cms/elements.html
+++ b/templates/cms/elements.html
@@ -2,7 +2,7 @@
 
 <div class='element-list'>
 
-{% for element in block_item.elements.all %}
+{% for element in block_item.public_elements.all %}
 	<div class='element element--id_{{ element.id }}'>
 		{% if element.image %}
 			<img src='{{ element.image.url }}' alt='{{ element.title }}' class='element__image'>
